Add AI enemy paddle and mobile controls
Introduced an AI-controlled enemy paddle with its own scene and controller script, and integrated it into the main scene. Added touch controls for the player paddle to support mobile input. Updated ball logic for improved direction and scene reset, and made various project and configuration adjustments for new assets and export presets.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,8 +8,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/Global.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/objects/AI/enemy.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/objects/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -27,11 +27,11 @@ dock_4="FileSystem"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/maps/main.tscn", "res://scenes/objects/player_pad.tscn", "res://scenes/objects/ball.tscn")
+open_scenes=PackedStringArray("res://scenes/maps/main.tscn", "res://scenes/objects/ball.tscn", "res://scenes/objects/AI/enemy.tscn", "res://scenes/objects/player_pad.tscn")
 current_scene="res://scenes/objects/ball.tscn"
 center_split_offset=-321
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
 [EditorWindow]
@@ -42,7 +42,7 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/player_pad.gd", "res://scripts/ball.gd", "res://scripts/Global.gd"]
+open_scripts=["res://scripts/ball.gd", "res://scripts/AI/enemy_controller.gd", "res://scripts/Global.gd", "res://scripts/player_pad.gd"]
 selected_script="res://scripts/ball.gd"
 open_help=[]
 script_split_offset=200
